--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "less-loader": "^11.1.0",
     "nprogress": "^0.2.0",
     "sass": "^1.62.1",
+    "swiper": "^9.2.4",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vite-plugin-style-import": "^1.4.1"
   }
 }
