--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nprogress": "^0.2.0",
     "sass": "^1.62.1",
     "swiper": "^9.2.4",
+    "vant": "^4.3.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
